<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SettingsActivity" android:orientation="vertical">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <include android:layout_width="wrap_content" android:layout_height="wrap_content"
                 layout="@layout/sample_menu"/>
        <TextView
                android:text="@string/settings"
                android:layout_width="0dp"
                android:layout_height="73dp" android:id="@+id/textView2" android:layout_weight="1"
                android:textSize="20sp" android:gravity="bottom|center"/>
    </LinearLayout>
    <Button android:id="@+id/notifSetButton"
            android:text="@string/notification_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onNotifClick"
            app:backgroundTint="#F06292"/>
    <Button android:id="@+id/pinChangeButton"
            android:text="@string/change_pin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onPinClick"
            app:backgroundTint="#FFB74D"/>
    <Button android:id="@+id/emerSetButton"
            android:text="@string/emergency_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onEmerClick"
            app:backgroundTint="#AED581"/>
    <Button android:id="@+id/contactUsButton"
            android:text="@string/contact_us_b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onContactClick"
            app:backgroundTint="#64B5F6"/>
    <Button android:id="@+id/tosButton"
            android:text="@string/terms_of_service_b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onTOSClick"
            app:backgroundTint="#BA68C8"/>
</LinearLayout>