<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".TOSActivity" android:orientation="vertical">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ContactActivity">

        <include android:layout_width="wrap_content" android:layout_height="wrap_content" layout="@layout/sample_menu"
        />
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <Button
                    android:text="@string/back"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/backButton3"
                    android:onClick="onBackClick"
                    app:backgroundTint="#9B86C1"/>
            <TextView
                    android:text="@string/terms_of_service"
                    android:layout_height="wrap_content"
                    android:id="@+id/conTextView"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:layout_width="match_parent"/>
        </LinearLayout>
    </LinearLayout>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp" android:id="@+id/textView3" android:layout_weight="1"
            android:text="@string/fakelink_com_tos"/>
</LinearLayout>