<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".StatusPage">
    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent">

        <TableRow android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical">
            <include android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     layout="@layout/sample_menu"/>
            <TextView
                    android:text="@string/status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/status"
                    android:textSize="80sp"
            />
        </TableRow>
        <TableRow android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical">
            <androidx.constraintlayout.widget.Barrier
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:barrierDirection="top"/>
            <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation='horizontal'>
                <RadioButton android:id="@+id/radio_off"
                        android:text="@string/off"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="onRadioButtonClicked"/>
                <RadioButton android:id="@+id/radio_away"
                        android:text="@string/away"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onRadioButtonClicked"
                        android:layout_weight="1"/>
                <RadioButton android:id="@+id/radio_home"
                        android:text="@string/home"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onRadioButtonClicked"
                        android:layout_weight="1"/>
            </RadioGroup>
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>