<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.gallery.GalleryFragment">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" tools:layout_editor_absoluteY="173dp"
            tools:layout_editor_absoluteX="79dp" android:orientation="vertical">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="94dp" android:baselineAligned="false">
            <include android:layout_width="wrap_content" android:layout_height="wrap_content"
                     layout="@layout/sample_menu"/>
            <Button android:id="@+id/detectHistoryButton"
                    android:text="@string/detection_history"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    app:backgroundTint="#9575CD"
                    android:layout_weight="1"/>
        </LinearLayout>
        <TextView android:id="@+id/deviceStatusText"
                android:text="@string/device_status"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textSize="20sp"/>
        <Button android:id="@+id/addDeviceButton"
                android:text="@string/add_device"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:backgroundTint="#E57373"/>
        <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="700dp">
        </HorizontalScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>